# conversation-summarizer

./: .env.example  .gitignore  README.md  __init__.py  api.py  context_assembler.py  download_data.sh  main.py  models.py  new_test_sample_conversations.py  pyproject.toml  requirements.txt  summarizer.py  test_prompt_output.json  test_sample_conversations.py  test_summarizer.py
preprocessors/: __init__.py  base.py  image_processor.py  ocr_processor.py  office_processor.py  pdf_processor.py
