[project]
name = "conversation-summarizer"
version = "1.0.0"
description = "多模态对话摘要系统 - 使用大模型进行对话摘要生成"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
gpu = [
    # GPU 加速相关依赖（如果需要本地模型推理）
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv 配置
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv.pip]
# pip 配置
index-url = "https://mirrors.aliyun.com/pypi/simple/"
